--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -1,15 +1,15 @@
 # Host to use for canonical URL generation (without trailing slash)
-host: https://dluhc-way.digital.levellingup.gov.uk
+host: https://mhclg-way.digital.communities.gov.uk
 service_link: /
 
 # Header-related options
 show_govuk_logo: false
-service_name: The DLUHC Way
-description: Technical standards and guidance used by teams building software at DLUHC
+service_name: The MHCLG Way
+description: Technical standards and guidance used by teams building software at MHCLG
 
 # Links to show on right-hand-side of header
 header_links:
-  GitHub: https://github.com/communitiesuk/dluhc-way
+  GitHub: https://github.com/communitiesuk/mhclg-way
 
 footer_links: 
   Accessibility: /accessibility.html
@@ -28,11 +28,11 @@ max_toc_heading_level: 6
 prevent_indexing: true
 
 show_contribution_banner: true
-github_repo: communitiesuk/dluhc-way
+github_repo: communitiesuk/mhclg-way
 github_branch: main
 
 # Ownership for page reviews
-default_owner_slack: '#dluhc-way'
+default_owner_slack: '#mhclg-way'
 owner_slack_workspace: communities-govuk
 
 redirects:
