Update links for live site and fix some typos
Some idiot (me) earlier did a replace of 're with ’l instead of ’re, so fixing those as well as the links.

--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -1,5 +1,5 @@
 # Host to use for canonical URL generation (without trailing slash)
-host: https://communitiesuk.github.io/mhclg-way/
+host: https://communitiesuk.github.io/mhclg-way
 # service_link: /
 
 # Header-related options
