--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -19,6 +19,12 @@ enable_search: true
 # Tracking ID from Google Analytics (e.g. UA-XXXX-Y)
 # ga_tracking_id: UA-111409592-1
 
+# Enable multipage navigation in the sidebar
+# multipage_nav: true
+
+# Enable collapsible navigation in the sidebar
+# collapsible_nav: true
+
 # Table of contents depth – how many levels to include in the table of contents.
 # If your ToC is too long, reduce this number and we'll only show higher-level
 # headings.
