--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -1,6 +1,7 @@
 # Host to use for canonical URL generation (without trailing slash)
 host: https://communitiesuk.github.io/mhclg-way
 service_link: /
+phase: Beta
 
 # Header-related options
 show_govuk_logo: false
@@ -20,15 +21,15 @@ enable_search: true
 # ga_tracking_id: UA-111409592-1
 
 # Enable multipage navigation in the sidebar
-# multipage_nav: true
+multipage_nav: true
 
 # Enable collapsible navigation in the sidebar
-# collapsible_nav: true
+collapsible_nav: true
 
 # Table of contents depth – how many levels to include in the table of contents.
 # If your ToC is too long, reduce this number and we'll only show higher-level
 # headings.
-max_toc_heading_level: 6
+max_toc_heading_level: 2
 
 # Prevent robots from indexing (e.g. whilst in development)
 prevent_indexing: true
